--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -932,6 +932,244 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusions from looking at the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Bedrooms has one crazy outlier with ~33 bedrooms."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>price</th>\n",
+       "      <th>bedrooms</th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>sqft_living</th>\n",
+       "      <th>sqft_lot</th>\n",
+       "      <th>floors</th>\n",
+       "      <th>waterfront</th>\n",
+       "      <th>view</th>\n",
+       "      <th>condition</th>\n",
+       "      <th>grade</th>\n",
+       "      <th>sqft_above</th>\n",
+       "      <th>sqft_basement</th>\n",
+       "      <th>yr_built</th>\n",
+       "      <th>yr_renovated</th>\n",
+       "      <th>zipcode</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>long</th>\n",
+       "      <th>sqft_living15</th>\n",
+       "      <th>sqft_lot15</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>15870</th>\n",
+       "      <td>2402100895</td>\n",
+       "      <td>20140625T000000</td>\n",
+       "      <td>640000.0</td>\n",
+       "      <td>33</td>\n",
+       "      <td>1.75</td>\n",
+       "      <td>1620</td>\n",
+       "      <td>6000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1040</td>\n",
+       "      <td>580</td>\n",
+       "      <td>1947</td>\n",
+       "      <td>0</td>\n",
+       "      <td>98103</td>\n",
+       "      <td>47.6878</td>\n",
+       "      <td>-122.331</td>\n",
+       "      <td>1330</td>\n",
+       "      <td>4700</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               id             date     price  bedrooms  bathrooms  \\\n",
+       "15870  2402100895  20140625T000000  640000.0        33       1.75   \n",
+       "\n",
+       "       sqft_living  sqft_lot  floors  waterfront  view  condition  grade  \\\n",
+       "15870         1620      6000     1.0           0     0          5      7   \n",
+       "\n",
+       "       sqft_above  sqft_basement  yr_built  yr_renovated  zipcode      lat  \\\n",
+       "15870        1040            580      1947             0    98103  47.6878   \n",
+       "\n",
+       "          long  sqft_living15  sqft_lot15  \n",
+       "15870 -122.331           1330        4700  "
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_df[housing_df['bedrooms'] > 30]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given that this house has 1620 square feet of living space, it is likely a data entry error; impute value to \"3\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Several features with correlation coefficents greater than 0.1 with price appear to have a basically linear relationship to price according to the scatterplots.  \n",
+    " * Linear: square foot living, grade, square foot above, square foot living 15 (?), bathrooms, square foot basement\n",
+    " * Non-linear: view, bedrooms, lat, waterfront, floors, year renovated"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Correlation coefficents of features with non-linear relationships are high enough that they should not be ingnored.  \n",
+    "Conclusion: A non-linear model should be used."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>price</th>\n",
+       "      <th>bedrooms</th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>sqft_living</th>\n",
+       "      <th>sqft_lot</th>\n",
+       "      <th>floors</th>\n",
+       "      <th>waterfront</th>\n",
+       "      <th>view</th>\n",
+       "      <th>condition</th>\n",
+       "      <th>grade</th>\n",
+       "      <th>sqft_above</th>\n",
+       "      <th>sqft_basement</th>\n",
+       "      <th>yr_built</th>\n",
+       "      <th>yr_renovated</th>\n",
+       "      <th>zipcode</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>long</th>\n",
+       "      <th>sqft_living15</th>\n",
+       "      <th>sqft_lot15</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>15870</th>\n",
+       "      <td>2402100895</td>\n",
+       "      <td>20140625T000000</td>\n",
+       "      <td>640000.0</td>\n",
+       "      <td>33</td>\n",
+       "      <td>1.75</td>\n",
+       "      <td>1620</td>\n",
+       "      <td>6000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1040</td>\n",
+       "      <td>580</td>\n",
+       "      <td>1947</td>\n",
+       "      <td>0</td>\n",
+       "      <td>98103</td>\n",
+       "      <td>47.6878</td>\n",
+       "      <td>-122.331</td>\n",
+       "      <td>1330</td>\n",
+       "      <td>4700</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               id             date     price  bedrooms  bathrooms  \\\n",
+       "15870  2402100895  20140625T000000  640000.0        33       1.75   \n",
+       "\n",
+       "       sqft_living  sqft_lot  floors  waterfront  view  condition  grade  \\\n",
+       "15870         1620      6000     1.0           0     0          5      7   \n",
+       "\n",
+       "       sqft_above  sqft_basement  yr_built  yr_renovated  zipcode      lat  \\\n",
+       "15870        1040            580      1947             0    98103  47.6878   \n",
+       "\n",
+       "          long  sqft_living15  sqft_lot15  \n",
+       "15870 -122.331           1330        4700  "
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
