--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -1171,6 +1171,115 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.model_selection import train_test_split, cross_validate\n",
+    "from sklearn.preprocessing import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Baseline score for model to beat: 367362.23171800975\n"
+     ]
+    }
+   ],
+   "source": [
+    "baseline = housing_df['price'].std()\n",
+    "print('Baseline score for model to beat: {}'.format(baseline))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = housing_df.drop([\"id\", \"price\", \"date\"], axis = 1)\n",
+    "y = housing_df['price']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = scaler.fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=77)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knn = KNeighborsRegressor(n_jobs=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = knn.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'fit_time': array([0.05255413, 0.14910388, 0.09964085, 0.13360214, 0.39903212]),\n",
+       " 'score_time': array([0.62389708, 0.8818891 , 1.16511798, 1.02078891, 1.15400982]),\n",
+       " 'test_score': array([-91217.38433576, -93819.88863186, -90458.63370787, -87693.93278255,\n",
+       "        -93239.93679339]),\n",
+       " 'train_score': array([-73383.66039825, -73267.99624886, -73570.13540445, -74550.04985541,\n",
+       "        -73095.59755453])}"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_validate(model, X_train, y_train, cv=5, n_jobs=-1, return_train_score=True, scoring='neg_mean_absolute_error')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
