try baseline models

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -1171,11 +1171,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
+    "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import train_test_split, cross_validate\n",
     "from sklearn.preprocessing import StandardScaler"
    ]
@@ -1276,6 +1278,159 @@
    ],
    "source": [
     "cross_validate(model, X_train, y_train, cv=5, n_jobs=-1, return_train_score=True, scoring='neg_mean_absolute_error')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_model = RandomForestRegressor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
+       "           max_features='auto', max_leaf_nodes=None,\n",
+       "           min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "           min_samples_leaf=1, min_samples_split=2,\n",
+       "           min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=1,\n",
+       "           oob_score=False, random_state=None, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf_model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'fit_time': array([0.86977315, 0.88693094, 0.9039979 , 0.90668893, 0.9119103 ]),\n",
+       " 'score_time': array([0.01106811, 0.01006627, 0.00910997, 0.00938797, 0.0094409 ]),\n",
+       " 'test_score': array([-74286.87123776, -75118.18567416, -75018.87061577, -77509.12856907,\n",
+       "        -75929.49559071]),\n",
+       " 'train_score': array([-30151.33440692, -29814.85141838, -30873.91007257, -30922.00809008,\n",
+       "        -30826.12901491])}"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_validate(rf_model, X_train, y_train, cv=5, n_jobs=-1, return_train_score=True, scoring='neg_mean_absolute_error')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gb_model = GradientBoostingRegressor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GradientBoostingRegressor(alpha=0.9, criterion='friedman_mse', init=None,\n",
+       "             learning_rate=0.1, loss='ls', max_depth=3, max_features=None,\n",
+       "             max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
+       "             min_impurity_split=None, min_samples_leaf=1,\n",
+       "             min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "             n_estimators=100, presort='auto', random_state=None,\n",
+       "             subsample=1.0, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gb_model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'fit_time': array([1.5018518 , 1.57505608, 1.55150104, 1.50304008, 1.60060191]),\n",
+       " 'score_time': array([0.006001  , 0.00459099, 0.00528502, 0.00543094, 0.00427794]),\n",
+       " 'test_score': array([-77171.60819973, -78355.27762165, -77561.10853619, -78810.75770323,\n",
+       "        -77859.42757567]),\n",
+       " 'train_score': array([-71931.98283976, -71739.54757219, -71809.8848389 , -72077.92175271,\n",
+       "        -71210.73872073])}"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_validate(gb_model, X_train, y_train, cv=5, n_jobs=-1, return_train_score=True, scoring='neg_mean_absolute_error')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr_model = LinearRegression()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'fit_time': array([0.45235395, 0.20638299, 0.3490169 , 0.37456083, 0.04300809]),\n",
+       " 'score_time': array([0.00100708, 0.00152898, 0.0011189 , 0.00122404, 0.00161505]),\n",
+       " 'test_score': array([-127045.35673811, -126728.86737994, -124379.75366753,\n",
+       "        -124263.48541112, -128069.47079012]),\n",
+       " 'train_score': array([-125426.91345309, -123593.93400588, -126806.78969071,\n",
+       "        -126726.72211493, -126101.65016741])}"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_validate(lr_model, X_train, y_train, cv=5, n_jobs=-1, return_train_score=True, scoring='neg_mean_absolute_error')"
    ]
   },
   {
