--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -1171,13 +1171,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.neighbors import KNeighborsRegressor\n",
     "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
     "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.svm import SVR\n",
     "from sklearn.model_selection import train_test_split, cross_validate\n",
     "from sklearn.preprocessing import StandardScaler"
    ]
@@ -1431,6 +1433,74 @@
    ],
    "source": [
     "cross_validate(lr_model, X_train, y_train, cv=5, n_jobs=-1, return_train_score=True, scoring='neg_mean_absolute_error')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svr_model = SVR()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'fit_time': array([8.15416789, 8.16516089, 8.22448015, 8.15286303, 8.21782494]),\n",
+       " 'score_time': array([1.28324008, 1.29549217, 1.20464802, 1.24381185, 1.2336812 ]),\n",
+       " 'test_score': array([-223528.51402528, -221967.43163841, -221603.98340629,\n",
+       "        -218246.43580486, -221704.48121815]),\n",
+       " 'train_score': array([-220877.5783724 , -221268.99494327, -221360.38392204,\n",
+       "        -222198.05296762, -221333.38702968])}"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_validate(svr_model, X_train, y_train, cv=5, n_jobs=-1, return_train_score=True, scoring='neg_mean_absolute_error')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dt_model = DecisionTreeRegressor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'fit_time': array([0.15199709, 0.15215302, 0.14534187, 0.15168214, 0.14518714]),\n",
+       " 'score_time': array([0.00301981, 0.00243473, 0.0023911 , 0.00231886, 0.00268793]),\n",
+       " 'test_score': array([-101041.85128883,  -98866.48248513, -101216.20786517,\n",
+       "        -104830.07055519, -104940.92016529]),\n",
+       " 'train_score': array([-627.0051227 , -637.99884326, -704.51499628, -606.02387838,\n",
+       "        -549.91573034])}"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_validate(dt_model, X_train, y_train, cv=5, n_jobs=-1, return_train_score=True, scoring='neg_mean_absolute_error')"
    ]
   },
   {
